--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             <h2>Portfolio</h2>
             <div class="portfolio-item">
                 <a href="https://via.placeholder.com/800x600" data-lightbox="portfolio" data-title="Project Title">
-                    <img src="https://via.placeholder.com/300" alt="Portfolio Item 1">
+                    <img src="https://media.licdn.com/dms/image/C5603AQFlGsgTNXng7Q/profile-displayphoto-shrink_400_400/0/1663572317433?e=1717027200&v=beta&t=Jb4qPeQreUBN4jOKGgcVtRuUf2XjIv9GpCDvttHSUKI">
                     <div class="overlay">
                         <h3>Project Title</h3>
                     </div>
